--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: var(--primary);
   margin: 0;
   padding: 0;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: sans-serif;
   color: var(--dark);
   line-height: 1.5;
   font-size: 16px;
@@ -89,7 +89,7 @@ input {
 .btn:hover {
   color: var(--primary);
   background-color: var(--tertiary);
-  transform: translate(0, 0);
+  transform: scale(102%);
   box-shadow: 2px 2px var(--dark);
   cursor: pointer;
 }
@@ -103,11 +103,18 @@ input {
 }
 
 .navbar {
-  width: 100%;
+  width: 100vw;
   position: fixed;
+  display: flex;
+  justify-content: space-between;
   background-color: var(--dark);
 }
-
+.navbar header{
+  float:left;
+}
+.nav-menu {
+  float:right;
+}
 .nav-item {
   margin: 0 40px;
 }
@@ -133,7 +140,6 @@ input {
   padding: 0 10px;
   display: inline-block;
   border-radius: var(--border-radius);
-  box-shadow: 6px 5px var(--light-dark);
 }
 
 .app-title a {
@@ -171,8 +177,8 @@ input {
 /* CARDS */
 .card {
   margin: 0 0 20px 0;
-  border: 3px solid var(--dark);
   border-radius: var(--border-radius);
+  box-shadow: #6f6866 0 10px 14px;
 }
 
 .card-header {
